--- a/package.json
+++ b/package.json
@@ -35,11 +35,14 @@
     "ol-ext": "^3.2.25",
     "simple-statistics": "^7.7.5",
     "v-click-outside": "^3.1.2",
+    "v-money": "^0.8.1",
     "vue": "^2.6.14",
     "vue-apexcharts": "^1.6.2",
+    "vue-multiselect": "^2.1.6",
     "vue-server-renderer": "^2.6.14",
     "vue-swatches": "^2.1.1",
     "vue-template-compiler": "^2.6.14",
+    "vue-the-mask": "^0.11.1",
     "vue-toastification": "^1.7.14",
     "webpack": "^4.46.0",
     "xlsx": "^0.18.5"
@@ -53,6 +56,7 @@
     "@nuxtjs/stylelint-module": "^4.1.0",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.3",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
     "lint-staged": "^12.1.2",
