--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "vue-template-compiler": "^2.6.14",
     "vue-the-mask": "^0.11.1",
     "vue-toastification": "^1.7.14",
+    "vue2-org-tree": "^1.3.6",
     "webpack": "^4.46.0",
     "xlsx": "^0.18.5"
   },
